--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="123.html" id="person">person</a></li>
+							<li><a href="123.html" id="person">個人頁面</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
@@ -426,9 +426,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+    <script src="https://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="http://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="https://getbootstrap.com/assets/js/ie10-viewport-bug-workaround.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL6jufC2Qe61igD_cSxoxEx9E9JqOJJM0&callback=initMap&signed_in=true&libraries=places&sensor=false" async defer>
     </script><!--map-->
 <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
