--- a/info.html
+++ b/info.html
@@ -207,7 +207,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#" id="person">person</a></li>
+							<li><a href="#" id="person">個人頁面</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
@@ -241,7 +241,7 @@
                     <table class="rwd-table">    
                         <tr>
                             <td style="font-weight:500;	font-size: 18px;">分享至...</td>
-                            <td><a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('https://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a><a href="javascript: void(window.open('https://line.naver.jp/R/msg/text/?'.concat(encodeURIComponent(location.href))));"><img src="images/share_icon/line.png"border="0" width="48" alt="分享到LINE！" /></a></td>
+                            <td><a href="javascript: void(window.open('https://www.facebook.com/share.php?u='.concat(encodeURIComponent(location.href)) ));"><img title="分享到臉書！" src="images/share_icon/facebook.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://www.plurk.com/?qualifier=shares&status=' .concat(encodeURIComponent(location.href)) .concat(' ') .concat('&#40;') .concat(encodeURIComponent(document.title)) .concat('&#41;')));"><img title="分享到噗浪！" src="images/share_icon/plurk.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://twitter.com/home/?status='.concat(encodeURIComponent(document.title)) .concat(' ') .concat(encodeURIComponent(location.href))));"><img title="分享到推特！" src="images/share_icon/twitter.png" border="0" width="48" /></a><a href="javascript:(function(){window.open('http://v.t.sina.com.cn/share/share.php?title='+encodeURIComponent(document.title)+'&url='+encodeURIComponent(location.href)+'&source=bookmark','_blank','width=450,height=400');})()"><img title="分享到微博！" src="images/share_icon/weibo.png" border="0" width="48" /></a><a href="javascript: void(window.open('https://plus.google.com/share?url='.concat(encodeURIComponent(location.href)), '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600'));"><img title="分享到Google+！" src="images/share_icon/google_plus.png" border="0" width="48" ></a><a href="javascript: void(window.open('https://line.naver.jp/R/msg/text/?'.concat(encodeURIComponent(location.href))));"><img src="images/share_icon/line.png"border="0" width="48" alt="分享到LINE！" /></a></td>
                         </tr>
                         <tr>
                             <td><p id="star"></p></td>
@@ -351,7 +351,8 @@ $('img').click(function () {
 				RefU.update({
 					went:a
 				});
-				document.getElementById("nowRank").innerHTML= "工廠評價 : "+s/c;
+				var num = new Number(s/c);
+				document.getElementById("nowRank").innerHTML= "工廠評價 : " + num.toFixed(1);
 				document.getElementById("youRank").innerHTML= "你的評價 : "+ st;
 			});					
 		});						
@@ -371,8 +372,10 @@ var RefF = firebase.database().ref('factory/' + myhash[1]);
 		var id = childSnapshot.val().picture;
 		if(c==0)
 			document.getElementById("nowRank").innerHTML= '工廠評價 : 尚未有人評價' ;		
-        else
-			document.getElementById("nowRank").innerHTML= "工廠評價 : " + s/c;
+        else{
+			var num = new Number(s/c);
+			document.getElementById("nowRank").innerHTML= "工廠評價 : " + num.toFixed(1);
+		}			
 		var user = firebase.auth().currentUser;		
 		if (user != null) {
 			var RefU = firebase.database().ref('user/' + user.uid);
