--- a/location.html
+++ b/location.html
@@ -83,7 +83,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+              <a class="navbar-brand" href="index.html"><img src="images/Logo.png"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -92,7 +92,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#" id="person">person</a></li>
+							<li><a href="#" id="person">個人頁面</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
