--- a/person.html
+++ b/person.html
@@ -38,7 +38,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
      <!-- end-->
-      <link rel="stylesheet" href="css/block_style.css">
+      <link rel="stylesheet" href="css/block_person.css">
       <link rel="stylesheet" href="css/style1.css">
       <link href="css/top.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -70,7 +70,7 @@
 
   <body>
 	<a href="javascript:" id="top"><i class="icon-chevron-up"></i></a>
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<div class="navbar-wrapper">
       <div class="container">
 
@@ -83,7 +83,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+              <a class="navbar-brand" href="index.html"><img src="images/Logo.png"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">          
 				<ul class="nav navbar-nav navbar-right">
@@ -92,7 +92,7 @@
 					<li class="dropdown hide" id="name">
 						<a  class="dropdown-toggle" id="Uname" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User<span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a href="#" id="person">person</a></li>
+							<li><a href="#" id="person">個人頁面</a></li>
 							<li role="separator" class="divider"></li>
 							<li><a id="out">Log out</a></li>
 						</ul>
@@ -182,7 +182,7 @@
 	</div>
   </div>
 </div>
-	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/top.js"></script>
 	<!-- Bootstrap core JavaScript
     ================================================== -->
